完成歌曲列表(实现传值歌名、歌手、封面、品质，音乐目前为本地资源)

--- a/app/src/main/res/layout/activity_player_layout.xml
+++ b/app/src/main/res/layout/activity_player_layout.xml
@@ -77,12 +77,12 @@
         android:layout_marginTop="12dp"
         android:background="#FFFFFF"
         android:text="@string/BACK"
-        android:textSize="24sp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/song_title"
         android:layout_width="223dp"
         android:layout_height="46dp"
         android:layout_marginStart="6dp"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/last_lyrics"
+        android:id="@+id/singer"
         android:layout_width="259dp"
         android:layout_height="32dp"
         android:layout_marginEnd="76dp"
@@ -105,7 +105,7 @@
         app:layout_constraintTop_toBottomOf="@+id/iv" />
 
     <TextView
-        android:id="@+id/now_lyrics"
+        android:id="@+id/qingxidu"
         android:layout_width="259dp"
         android:layout_height="32dp"
         android:layout_marginEnd="76dp"
@@ -113,7 +113,7 @@
         android:text="TextView"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/last_lyrics" />
+        app:layout_constraintTop_toBottomOf="@+id/singer" />
 
     <TextView
         android:id="@+id/next_lyrics"
@@ -121,10 +121,10 @@
         android:layout_height="32dp"
         android:layout_marginEnd="76dp"
         android:gravity="center"
-        android:text="TextView"
+        android:text=""
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/now_lyrics" />
+        app:layout_constraintTop_toBottomOf="@+id/qingxidu" />
 
     <ImageView
         android:id="@+id/star"
