--- a/app/src/main/res/layout/music_row.xml
+++ b/app/src/main/res/layout/music_row.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="132dp"
         android:layout_marginTop="8dp"
+        android:text="@string/songtitle"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,9 +30,9 @@
         android:id="@+id/qingxidu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginLeft="132dp"
         android:layout_marginTop="50dp"
+        android:text="@string/qingxidu"
         android:textColor="#969595"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/cover"
@@ -42,9 +43,9 @@
         android:id="@+id/singer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginLeft="132dp"
         android:layout_marginTop="90dp"
+        android:text="@string/singer"
         android:textColor="#969595"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/cover"
