--- a/app/src/main/res/layout/activity_player_layout.xml
+++ b/app/src/main/res/layout/activity_player_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img"
     tools:context=".player_layout">
 
     <SeekBar
@@ -70,6 +71,7 @@
         android:layout_marginTop="12dp"
         android:background="#FFFFFF"
         android:text="@string/BACK"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -115,16 +117,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/singer" />
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="258dp"
-        android:layout_height="91dp"
-        android:layout_marginEnd="76dp"
-        android:gravity="center"
-        android:text=""
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/qingxidu" />
+    <ScrollView
+        android:id="@+id/abc"
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:scrollbarStyle="insideOverlay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/qingxidu">
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="258dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="52dp"
+            android:layout_marginEnd="76dp"
+            android:gravity="center"
+            android:text=""
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -134,7 +145,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text">
+        app:layout_constraintTop_toBottomOf="@+id/abc">
 
         <FrameLayout
             android:layout_width="74dp"
