--- a/app/src/main/res/layout/music_row.xml
+++ b/app/src/main/res/layout/music_row.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="0dp"
     android:layout_marginRight="4dp"
     android:clickable="true"
-    android:minHeight="150dp">
+    android:minHeight="150dp"
+    app:cardBackgroundColor="#88000000"
+    app:cardElevation="1dp"
+    app:checkedIconTint="#FFFFFF">
 
     <TextView
         android:id="@+id/song_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="38dp"
         android:layout_marginLeft="132dp"
         android:layout_marginTop="8dp"
+        android:background="#00000000"
         android:text="@string/songtitle"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
+        android:textStyle=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -62,7 +67,6 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </com.google.android.material.card.MaterialCardView>
